1.5.11: 
 * Added a font selection button to the toolbar.
 * Decreased the default note text font size, so now you can see more of your
   note text at once.
 * Added more rounded corners to several display elements.
 * Fixed a Luminotes Desktop bug in which creating and then clicking on a new
   note link sometimes caused a red error message.

1.5.10: December 4, 2008
 * Fixed a bug in which certain new installations of Luminotes Desktop
   on Windows yielded an "uh oh" error on initial launch. This bug did
   not occur during upgrades. It only affected new installations.

1.5.9: December 3, 2008
 * When you hover the mouse over a link and a link pulldown appears, that
   pulldown will now automatically disappear soon after you move the mouse
   away.
 * Changed the "new note" key from ctrl-N to ctrl-M so as not to conflict with
   the "new browser window" key used in most web browsers.
 * Fixed a Chrome/Safari bug in which ending a link didn't always work.
 * Fixed a rare Chrome/Safari bug in which pressing backspace sometimes made
   the text cursor vanish.
 * Fixed an Internet Explorer bug in which backspace sometimes didn't work,
   such as when backspacing an empty list element.

1.5.8: November 24, 2008
 * Fixed a bug that prevented notes from being automatically saved in certain
   notebooks.
 * Fixed a rare bug in which Luminotes sometimes indicated that the current
   note was saved even when it wasn't.
 * Fixed a bug that prevented deleted notes from being displayed within the
   trash.

1.5.7: November 18, 2008
 * Rearranged the links on the left and right side of the wiki editing page
   so that the note title links have a little more horizontal breathing room.
 * You can now add an existing note directly to the note tree, instead of
   having to click "options" -> "show on startup".
 * Improved site navigation by adding more useful links to the page footer.
 * Converted the Luminotes blog to work like a forum, so now you can post